--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "ytb-test",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.html",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "dev": "NODE_ENV=development webpack-dev-server --mode development",
+    "build": "NODE_ENV=production webpack --mode production"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.7",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -16,12 +18,15 @@
   "devDependencies": {
     "@swc/cli": "^0.1.63",
     "@swc/core": "^1.3.99",
+    "@tanstack/eslint-plugin-query": "^5.8.4",
+    "@tanstack/react-query-devtools": "^5.8.7",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "autoprefixer": "^10.4.16",
     "css-loader": "^6.8.1",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.54.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.29.0",
