--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -20,6 +21,7 @@
     "@swc/core": "^1.3.99",
     "@tanstack/eslint-plugin-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.7",
+    "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
